# meetily

./: .gitignore  CLAUDE.md  Cargo.toml  DOGFOOD.md  EXPORTER-PLAN.md  RESEARCH-claude.md  RESEARCH-codex.md  claude-m1.md
backend/: pyproject.toml
backend/server/: app.py  database.py  models.py
backend/server/static/: index.html
backend/server/tests/: conftest.py  test_api.py  test_e2e.py  test_unit.py
deploy/: README.md  com.meetily.client.plist  install-macos.sh  meetily-server.service  server.env.example
docs/: ctx.md  design.md  per-source-implementation-handoff.md  per-source-pipeline-design.md  session-3-handoff.md  verification-protocol.md
docs/sample-meetings/: 2026-04-29-real-meeting-test-52b6fb1d.md  2026-04-29-smoke-test-meeting-004d221a.md  2026-04-29-voice-test-from-m4-87dcb3ef.md  2026-05-07-cli-test-recording-423327e5.md
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/src/api/: api.rs
frontend/src-tauri/src/audio/: common.rs  device_detection.rs  mod.rs  pipeline.rs  recording_commands.rs  recording_manager.rs  recording_mix.rs  recording_saver.rs  vad.rs
frontend/src-tauri/src/audio/capture/: mod.rs
frontend/src-tauri/src/audio/devices/: fallback.rs
frontend/src-tauri/src/audio/transcription/: worker.rs
frontend/src-tauri/src/database/: models.rs
frontend/src-tauri/src/database/repositories/: meeting.rs  transcript.rs
frontend/src-tauri/src/summary/: llm_client.rs  service.rs
frontend/src-tauri/src/summary/templates/: mod.rs
frontend/src/components/: ModelSettingsModal.tsx  VirtualizedTranscriptView.tsx
frontend/src/components/MeetingDetails/: TranscriptPanel.tsx
frontend/src/contexts/: TranscriptContext.tsx
frontend/src/hooks/: usePaginatedTranscripts.ts  useTranscriptRecovery.ts
frontend/src/hooks/meeting-details/: useModelConfiguration.ts
frontend/src/services/: configService.ts
frontend/src/types/: index.ts
meetily-audio/: Cargo.toml
meetily-audio/src/: aec.rs  lib.rs  resample.rs  source.rs  vad.rs
meetily-audio/src/capture/: core_audio.rs  mod.rs
meetily-audio/tests/: no_mixing.rs  no_mixing_in_tauri.rs
meetily-audio/tests/compile-fail/: cannot_call_crate_private_ctor.rs  cannot_call_crate_private_ctor.stderr  cannot_construct_externally.rs  cannot_construct_externally.stderr
meetily-client/: Cargo.toml
meetily-client/examples/: whisper_parallel_bench.rs
meetily-client/src/: lib.rs  main.rs  transcribe.rs  upload.rs
meetily-client/src/audio/: capture.rs  devices.rs  mod.rs  resample.rs  vad.rs
scripts/: download-model.sh
