[package]
name = "meetily-client"
version = "0.1.0"
edition = "2021"

[dependencies]
meetily-audio = { path = "../meetily-audio" }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
whisper-rs = { version = "0.13", features = ["raw-api"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
hound = "3.5"
log = "0.4"
env_logger = "0.11"
dirs = "5"
tokio-util = "0.7"
silero = { git = "https://github.com/emotechlab/silero-rs", rev = "26a6460", features = ["static-model"] }
rubato = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13", features = ["raw-api", "metal"] }
