[package]
name = "meetily-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["aec"]
# Enable Apple Core Audio Tap system-audio capture (macOS 14.2+).
# Requires full Xcode because cidre builds native helper code with xcodebuild;
# Command Line Tools-only machines can still build the default cpal/AEC client.
# Enable explicitly with `--features coreaudio` on macOS machines that have full
# Xcode selected via xcode-select.
coreaudio = ["meetily-audio/coreaudio", "dep:futures-util"]
# Enable WebRTC AEC3 (sonora-aec3, pure-Rust). On by default; `--no-aec`
# at the CLI bypasses it at runtime. See per-source-pipeline-design v3.2 §3.
aec = ["meetily-audio/aec"]

[dependencies]
meetily-audio = { path = "../meetily-audio" }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
whisper-rs = { version = "0.13", features = ["raw-api"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
hound = "3.5"
log = "0.4"
env_logger = "0.11"
dirs = "5"
tokio-util = "0.7"
futures-util = { version = "0.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13", features = ["raw-api", "metal"] }
